# cafs-lib

./: .gitignore  LICENSE  README.md
benchmark/: CMakeLists.txt  bench_engine.hpp  competitors.hpp  datagen.hpp  main_bigdata.cpp
bindings/: README.md
bindings/c/: cafs_c.cpp
bindings/go/: README.md  cafs.go  cafs2.hpp  cafs_shim.cpp  cafs_shim.h  cafs_test.go  go.mod
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/cafs/: __init__.py
bindings/python/src/: cafs_py.cpp
bindings/python/tests/: test_basic.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: lib.rs
include/: cafs.hpp  cafs2.hpp
tests/: sanity.cpp
tools/sos/: README.md  build.ps1  build.sh  events.json  render.py  sos_trace.cpp
