[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "cafs"
version = "0.1.0"
description = "Cache-aware frequency sort for low-cardinality integer arrays (x86-64 + AVX2)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vasiliy S. Shlyk", email = "kexibq.official@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/kexibq-official/cafs-lib"
Source = "https://github.com/kexibq-official/cafs-lib"

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
wheel.packages = ["cafs"]
